# thongkeshopee

./: .firebaserc  .gitignore  database.rules.json  firebase.json  firestore.rules  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.json
docs/: ACC---Dũng-Chiến-dịch-12-Tháng-4-2026-12-Tháng-4-2026.csv  ACC---Dũng-Chiến-dịch-13-Tháng-4-2026-13-Tháng-4-2026.csv  ACC---Dũng-Chiến-dịch-14-Tháng-4-2026-14-Tháng-4-2026.csv  ACC---Dũng-Chiến-dịch-15-Tháng-4-2026-15-Tháng-4-2026.csv  ACC---Dũng-Chiến-dịch-16-Tháng-4-2026-16-Tháng-4-2026 (1).csv  ACC---Dũng-Chiến-dịch-16-Tháng-4-2026-16-Tháng-4-2026.csv  ACC---Dũng-Chiến-dịch-17-Tháng-4-2026-17-Tháng-4-2026.csv  ACC---Dũng-Chiến-dịch-18-Tháng-4-2026-18-Tháng-4-2026.csv  ACC---Dũng-Chiến-dịch-19-Tháng-4-2026-19-Tháng-4-2026.csv  CD-15-04.csv  (+65 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: accounts.rs  admin_view.rs  app_settings.rs  app_util.rs  apps_script.rs  batch.rs  db_transfer.rs  device.rs  drive.rs  imports.rs  manual.rs  mod.rs  preview.rs  query.rs  screenshot.rs  sync.rs  sync_client.rs  sync_v9_cmds.rs  video.rs
src-tauri/src/db/: content_id.rs  mod.rs  schema.sql  types.rs  video_db.rs
src-tauri/src/sync_v9/: apply.rs  bootstrap.rs  capture.rs  client.rs  compaction.rs  compress.rs  content_id.rs  dedup.rs  descriptors.rs  event_log.rs  hlc.rs  integration_tests.rs  manifest.rs  manifest_cache.rs  mod.rs  pull.rs  push.rs  snapshot.rs  types.rs
(+135 files in other folders)
