[package]
name = "thongkeshopee"
version = "0.3.0"
description = "Shopee Affiliate Tracker — Thống kê chạy ads FB hàng ngày"
authors = ["dungnv92734"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thongkeshopee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
tokio = { version = "1", features = ["fs", "io-util", "rt", "macros"] }
futures-util = "0.3"
base64 = "0.22"
md-5 = "0.10"
machine-uid = "0.5"
hex = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }
num_cpus = "1"

